Refactor signal tally structure

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -530,7 +530,6 @@
     <Compile Include="Model\Routers\DynamicTextFunctions\RouterOutputInputLabel.cs" />
     <Compile Include="Model\Routers\DynamicTextFunctions\RouterOutputInputName.cs" />
     <Compile Include="Model\Routers\DynamicTextFunctions\RouterOutputSource.cs" />
-    <Compile Include="Model\Routers\IRouterOutputAssignable.cs" />
     <Compile Include="Model\Routers\Label.cs" />
     <Compile Include="Model\Routers\Labelset.cs" />
     <Compile Include="Model\Routers\LabelsetDatabase.cs" />
@@ -543,7 +542,6 @@
     <Compile Include="Model\Routers\RouterInput.cs" />
     <Compile Include="Model\Routers\RouterInputXmlSerializer.cs" />
     <Compile Include="Model\Routers\RouterOutput.cs" />
-    <Compile Include="Model\Routers\RouterOutputAssignableExternalSignal.cs" />
     <Compile Include="Model\Routers\RouterOutputXmlSerializer.cs" />
     <Compile Include="Model\Routers\RouterState.cs" />
     <Compile Include="Model\Routers\RouterTypeNameConverter.cs" />
@@ -566,14 +564,24 @@
     <Compile Include="Model\Settings\Setting.cs" />
     <Compile Include="Model\Settings\SettingsManager.cs" />
     <Compile Include="Model\Settings\Converters\SettingValueConverterAttribute.cs" />
-    <Compile Include="Model\Signals\ISignal.cs" />
-    <Compile Include="Model\Signals\ISignalTallySource.cs" />
+    <Compile Include="Model\Signals\BidirectionalPassthroughSignalTally.cs" />
+    <Compile Include="Model\Signals\IBidirectionalSignalTally.cs" />
+    <Compile Include="Model\Signals\ISignalDestination.cs" />
+    <Compile Include="Model\Signals\ISignalSourceRegistered.cs" />
+    <Compile Include="Model\Signals\ISignalSource.cs" />
+    <Compile Include="Model\Signals\ISignalTallyState.cs" />
     <Compile Include="Model\Signals\ExternalSignalCategory.cs" />
     <Compile Include="Model\Signals\ExternalSignal.cs" />
     <Compile Include="Model\Signals\ExternalSignalDatabases.cs" />
+    <Compile Include="Model\Signals\ISignalTallyReceiver.cs" />
+    <Compile Include="Model\Signals\ISignalTallySender.cs" />
+    <Compile Include="Model\Signals\ISignalTallyStateOrReceiver.cs" />
+    <Compile Include="Model\Signals\PassthroughSignalTallyState.cs" />
+    <Compile Include="Model\Signals\PassthroughSignalTallyReceiver.cs" />
     <Compile Include="Model\Signals\SignalRegister.cs" />
     <Compile Include="Model\Signals\SignalsManager.cs" />
-    <Compile Include="Model\Signals\SignalTallyType.cs" />
+    <Compile Include="Model\Signals\ExternalSignalTally.cs" />
+    <Compile Include="Model\Signals\SignalTallyColor.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamStateTranslated.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamState.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamViewerCount.cs" />
