--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -191,6 +191,18 @@
     <Compile Include="GUI\Menus\MenuItem.cs" />
     <Compile Include="GUI\Menus\MenuManager.cs" />
     <Compile Include="GUI\Menus\SeparatorMenuItem.cs" />
+    <Compile Include="GUI\Routers\Mirrors\RouterMirrorList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Routers\Mirrors\RouterMirrorList.Designer.cs">
+      <DependentUpon>RouterMirrorList.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Routers\Mirrors\RouterMirrorEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Routers\Mirrors\RouterMirrorEditorForm.Designer.cs">
+      <DependentUpon>RouterMirrorEditorForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="GUI\Routers\VirtualLeitchRouterEditorForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -553,6 +565,17 @@
     <Compile Include="Model\Routers\Leitch\VirtualLeitchRouterOutput.cs" />
     <Compile Include="Model\Routers\Macros\RouterMacroCommands.cs" />
     <Compile Include="Model\Routers\Macros\SetRouterCrosspointMacroCommand.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorAssociation.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorAssociationXmlSerializer.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorDatabase.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirror.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorInputAssociation.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorOutputAssociationXmlSerializer.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorInputAssociationXmlSerializer.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorOutputAssociation.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorSide.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorSideHelpers.cs" />
+    <Compile Include="Model\Routers\Mirrors\RouterMirrorSynchronizationMode.cs" />
     <Compile Include="Model\Routers\Router.cs" />
     <Compile Include="Model\Routers\RouterDatabase.cs" />
     <Compile Include="Model\Routers\RouterInput.cs" />
@@ -733,6 +756,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Mixers\MixerEditorFormBase.resx">
       <DependentUpon>MixerEditorFormBase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Routers\Mirrors\RouterMirrorList.resx">
+      <DependentUpon>RouterMirrorList.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Routers\Mirrors\RouterMirrorEditorForm.resx">
+      <DependentUpon>RouterMirrorEditorForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Routers\VirtualLeitchRouterEditorForm.resx">
       <DependentUpon>VirtualLeitchRouterEditorForm.cs</DependentUpon>
