--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -586,6 +586,7 @@
     <Compile Include="Model\Signals\SignalsManager.cs" />
     <Compile Include="Model\Signals\ExternalSignalTally.cs" />
     <Compile Include="Model\Signals\ExternalSignalTallyBoolean.cs" />
+    <Compile Include="Model\Signals\SignalTallyBoolean.cs" />
     <Compile Include="Model\Signals\SignalTallyColor.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamStateTranslated.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamState.cs" />
