--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -333,6 +333,7 @@
     <Compile Include="GUI\Signals\ExternalSignalCategoryList.Designer.cs">
       <DependentUpon>ExternalSignalCategoryList.cs</DependentUpon>
     </Compile>
+    <Compile Include="GUI\Signals\Helpers\SignalTallyHelpers.cs" />
     <Compile Include="GUI\Signals\SignalList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -350,6 +351,18 @@
     </Compile>
     <Compile Include="GUI\Signals\ExternalSignalCategoryEditorForm.Designer.cs">
       <DependentUpon>ExternalSignalCategoryEditorForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Signals\TallyCopy\TallyCopyEditorForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Signals\TallyCopy\TallyCopyEditorForm.Designer.cs">
+      <DependentUpon>TallyCopyEditorForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="GUI\Signals\TallyCopy\TallyCopyList.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="GUI\Signals\TallyCopy\TallyCopyList.Designer.cs">
+      <DependentUpon>TallyCopyList.cs</DependentUpon>
     </Compile>
     <Compile Include="GUI\SplashScreen.cs">
       <SubType>Form</SubType>
@@ -614,6 +627,7 @@
     <Compile Include="Model\Signals\ISignalDestination.cs" />
     <Compile Include="Model\Signals\ISignalSourceRegistered.cs" />
     <Compile Include="Model\Signals\ISignalSource.cs" />
+    <Compile Include="Model\Signals\ISignalSourceTallyHelper.cs" />
     <Compile Include="Model\Signals\ISignalTallyState.cs" />
     <Compile Include="Model\Signals\ExternalSignalCategory.cs" />
     <Compile Include="Model\Signals\ExternalSignal.cs" />
@@ -631,6 +645,8 @@
     <Compile Include="Model\Signals\ExternalSignalTallyBoolean.cs" />
     <Compile Include="Model\Signals\SignalTallyBoolean.cs" />
     <Compile Include="Model\Signals\SignalTallyColor.cs" />
+    <Compile Include="Model\Signals\TallyCopy\TallyCopyDatabase.cs" />
+    <Compile Include="Model\Signals\TallyCopy\TallyCopy.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamStateTranslated.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamState.cs" />
     <Compile Include="Model\Streams\DynamicTextFunctions\StreamViewerCount.cs" />
@@ -836,6 +852,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\Signals\ExternalSignalCategoryEditorForm.resx">
       <DependentUpon>ExternalSignalCategoryEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Signals\TallyCopy\TallyCopyEditorForm.resx">
+      <DependentUpon>TallyCopyEditorForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="GUI\Signals\TallyCopy\TallyCopyList.resx">
+      <DependentUpon>TallyCopyList.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="GUI\SplashScreen.resx">
       <DependentUpon>SplashScreen.cs</DependentUpon>
