--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -538,32 +538,32 @@
     <Compile Include="Model\General\ObservableList.cs" />
     <Compile Include="Model\IDatabaseBase.cs" />
     <Compile Include="Model\IModel.cs" />
-    <Compile Include="Model\Macros\IMacroTriggerArgument.cs" />
-    <Compile Include="Model\Macros\IMacroTrigger.cs" />
+    <Compile Include="Model\Macros\Triggers\IMacroTriggerArgument.cs" />
+    <Compile Include="Model\Macros\Triggers\IMacroTrigger.cs" />
     <Compile Include="Model\Macros\MacroArgumentKeyType.cs" />
     <Compile Include="Model\Macros\MacroCodeInterpreter.cs" />
     <Compile Include="Model\Macros\MacroCodeTokenizer.cs" />
     <Compile Include="Model\Macros\MacroOscServer.cs" />
-    <Compile Include="Model\Macros\MacroTriggerBase.cs" />
-    <Compile Include="Model\Macros\MacroTriggerDefaultCallImplementations.cs" />
-    <Compile Include="Model\Macros\MacroTriggerWithArgumentsXmlSerializer.cs" />
-    <Compile Include="Model\Macros\MacroTriggerRegister.cs" />
-    <Compile Include="Model\Macros\MacroTriggerWithArguments.cs" />
-    <Compile Include="Model\Macros\MacroCommandWithArgumentsToCodeSerializer.cs" />
-    <Compile Include="Model\Macros\MacroPanelElementXmlSerializer.cs" />
-    <Compile Include="Model\Macros\MacroPanelDatabase.cs" />
-    <Compile Include="Model\Macros\MacroPanel.cs" />
-    <Compile Include="Model\Macros\MacroCommandBase.cs" />
-    <Compile Include="Model\Macros\MacroCommandRegister.cs" />
-    <Compile Include="Model\Macros\MacroCommandWithArguments.cs" />
-    <Compile Include="Model\Macros\IMacroCommandArgument.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerBase.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerDefaultCallImplementations.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerWithArgumentsXmlSerializer.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerRegister.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerWithArguments.cs" />
+    <Compile Include="Model\Macros\Commands\MacroCommandWithArgumentsToCodeSerializer.cs" />
+    <Compile Include="Model\Macros\Panels\MacroPanelElementXmlSerializer.cs" />
+    <Compile Include="Model\Macros\Panels\MacroPanelDatabase.cs" />
+    <Compile Include="Model\Macros\Panels\MacroPanel.cs" />
+    <Compile Include="Model\Macros\Commands\MacroCommandBase.cs" />
+    <Compile Include="Model\Macros\Commands\MacroCommandRegister.cs" />
+    <Compile Include="Model\Macros\Commands\MacroCommandWithArguments.cs" />
+    <Compile Include="Model\Macros\Commands\IMacroCommandArgument.cs" />
     <Compile Include="Model\Macros\MacroDatabase.cs" />
-    <Compile Include="Model\Macros\IMacroCommand.cs" />
+    <Compile Include="Model\Macros\Commands\IMacroCommand.cs" />
     <Compile Include="Model\Macros\Macro.cs" />
-    <Compile Include="Model\Macros\MacroPanelElement.cs" />
+    <Compile Include="Model\Macros\Panels\MacroPanelElement.cs" />
     <Compile Include="Model\Macros\MacrosManager.cs" />
-    <Compile Include="Model\Macros\MacroCommandWithArgumentsXmlSerializer.cs" />
-    <Compile Include="Model\Macros\RunMacroMacroCommand.cs" />
+    <Compile Include="Model\Macros\Commands\MacroCommandWithArgumentsXmlSerializer.cs" />
+    <Compile Include="Model\Macros\Commands\RunMacroMacroCommand.cs" />
     <Compile Include="Model\MasterDatabase.cs" />
     <Compile Include="Model\Mixers\BlackMagicDesign\BmdMixer.cs" />
     <Compile Include="Model\Mixers\BlackMagicDesign\Macros\SetProgramSourceMacroCommand.cs" />
