Refactor triggers, remove model->trigger dependencies

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -545,14 +545,21 @@
     <Compile Include="Model\Macros\Commands\MacroCommandArgumentDatabaseItem.cs" />
     <Compile Include="Model\Macros\Commands\MacroCommandAttribue.cs" />
     <Compile Include="Model\Macros\Commands\MacroCommandArgumentBase.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerArgumentDatabaseItem.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerArgumentDatabaseSubTypeItem.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerArgumentInt.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerArgumentString.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerArgumentBase.cs" />
     <Compile Include="Model\Macros\Triggers\IMacroTriggerArgument.cs" />
     <Compile Include="Model\Macros\Triggers\IMacroTrigger.cs" />
     <Compile Include="Model\Macros\MacroArgumentKeyType.cs" />
     <Compile Include="Model\Macros\MacroCodeInterpreter.cs" />
     <Compile Include="Model\Macros\MacroCodeTokenizer.cs" />
     <Compile Include="Model\Macros\MacroOscServer.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerArgumentAttribute.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerAttribue.cs" />
     <Compile Include="Model\Macros\Triggers\MacroTriggerBase.cs" />
-    <Compile Include="Model\Macros\Triggers\MacroTriggerDefaultCallImplementations.cs" />
+    <Compile Include="Model\Macros\Triggers\MacroTriggerWithArgumentsActivationData.cs" />
     <Compile Include="Model\Macros\Triggers\MacroTriggerWithArgumentsXmlSerializer.cs" />
     <Compile Include="Model\Macros\Triggers\MacroTriggerRegister.cs" />
     <Compile Include="Model\Macros\Triggers\MacroTriggerWithArguments.cs" />
@@ -651,7 +658,7 @@
     <Compile Include="Model\Routers\RouterState.cs" />
     <Compile Include="Model\Routers\RouterTypeNameConverter.cs" />
     <Compile Include="Model\Routers\Triggers\RouterCrosspointChangedMacroTrigger.cs" />
-    <Compile Include="Model\Routers\Triggers\RouterOutputSourceChangedMacroTrigger.cs" />
+    <Compile Include="Model\Routers\Triggers\RouterOutputInputChangedMacroTrigger.cs" />
     <Compile Include="Model\Routers\Triggers\RouterMacroTriggers.cs" />
     <Compile Include="Model\Routers\Virtual\VirtualRouterOutputXmlSerializer.cs" />
     <Compile Include="Model\Routers\Virtual\VirtualRouterOutput.cs" />
