Refactor dynamic text functions

--- a/OpenSC/OpenSC.csproj
+++ b/OpenSC/OpenSC.csproj
@@ -713,13 +713,21 @@
     <Compile Include="Model\Variables\BooleanBase.cs" />
     <Compile Include="Model\Variables\BooleanRegister.cs" />
     <Compile Include="Model\Variables\DynamicText.cs" />
+    <Compile Include="Model\Variables\DynamicTextFunctionArgumentDatabaseItem.cs" />
+    <Compile Include="Model\Variables\DynamicTextFunctionArgumentBase.cs" />
+    <Compile Include="Model\Variables\DynamicTextFunctionArgumentString.cs" />
+    <Compile Include="Model\Variables\DynamicTextFunctionArgumentInt.cs" />
     <Compile Include="Model\Variables\DynamicTextFunctionArgumentType.cs" />
     <Compile Include="Model\Variables\DynamicTextDatabase.cs" />
+    <Compile Include="Model\Variables\DynamicTextFunctionArgumentAttribute.cs" />
+    <Compile Include="Model\Variables\DynamicTextFunctionAttribute.cs" />
+    <Compile Include="Model\Variables\DynamicTextFunctionBase.cs" />
     <Compile Include="Model\Variables\DynamicTextFunctionRegister.cs" />
     <Compile Include="Model\Variables\DynamicTextFunctionSubstituteBase.cs" />
     <Compile Include="Model\Variables\DynamicTextSubstituteBuilder.cs" />
     <Compile Include="Model\Variables\IBoolean.cs" />
     <Compile Include="Model\Variables\IDynamicTextFunction.cs" />
+    <Compile Include="Model\Variables\IDynamicTextFunctionArgument.cs" />
     <Compile Include="Model\Variables\IDynamicTextFunctionSubstitute.cs" />
     <Compile Include="Model\Variables\VariablesManager.cs" />
     <Compile Include="Model\VTRs\CasparCgPlayout.cs" />
