--- a/opensc-macros-model/opensc-macros-model.csproj
+++ b/opensc-macros-model/opensc-macros-model.csproj
@@ -34,6 +34,9 @@
     <Reference Include="Bespoke.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Bespoke.Common.1.0.0\lib\net45\Bespoke.Common.dll</HintPath>
     </Reference>
+    <Reference Include="Bespoke.Osc, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Bespoke.Osc.1.0.0\lib\net45\Bespoke.Osc.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -83,10 +86,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Bespoke.Common.Osc\Bespoke.Common.Osc.csproj">
-      <Project>{35d30dcb-74d1-40a2-9d22-40e1394ffc09}</Project>
-      <Name>Bespoke.Common.Osc</Name>
-    </ProjectReference>
     <ProjectReference Include="..\opensc-core-model\opensc-core-model.csproj">
       <Project>{16a6beec-548d-4a77-9fe6-8df8d5333219}</Project>
       <Name>opensc-core-model</Name>
