Add module declarations for model modules

--- a/opensc-booleans-model/opensc-booleans-model.csproj
+++ b/opensc-booleans-model/opensc-booleans-model.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Model\Variables\BooleanBase.cs" />
     <Compile Include="Model\Variables\BooleanRegister.cs" />
     <Compile Include="Model\Variables\IBoolean.cs" />
+    <Compile Include="Modules\BooleansModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
