--- a/opensc-vtrs-model/opensc-vtrs-model.csproj
+++ b/opensc-vtrs-model/opensc-vtrs-model.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Model\VTRs\VtrDatabase.cs" />
     <Compile Include="Model\VTRs\VtrState.cs" />
     <Compile Include="Model\VTRs\VtrTypeNameConverter.cs" />
+    <Compile Include="Modules\VtrsModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
