--- a/opensc-dynamictexts-gui/opensc-dynamictexts-gui.csproj
+++ b/opensc-dynamictexts-gui/opensc-dynamictexts-gui.csproj
@@ -43,6 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Modules\DynamictextsGuiModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="GUI\Variables\DynamicTextEditorForm.cs">
       <SubType>Form</SubType>
