--- a/opensc-umds-model/opensc-umds-model.csproj
+++ b/opensc-umds-model/opensc-umds-model.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Model\UMDs\UMD.cs" />
     <Compile Include="Model\UMDs\UmdDatabase.cs" />
     <Compile Include="Model\UMDs\UmdTypeNameConverter.cs" />
+    <Compile Include="Modules\UmdsModelModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
